# Failure-SSIL-Analyser

./: .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  dune-project  dune-workspace  lisproject.opam
lib/: ast_coherent_logic.ml  ast_program.ml  dune  example.ml  example.mli  failure_ssil_analyzer.ml  lisproject.ml  prelude.ml  utils.ml
lib/CFG/: node.ml  node.mli
lib/analysis/: analysis.ml  analysisState.ml  analysis_Base.ml  analysis_CommandConversion.ml  analysis_Prelude.ml  analysis_TestCommon.ml  analysis_TestUtils.ml  analysis_Utils.ml  atomic.ml  atomic_tests.ml  base.ml  expressionSubstitution.ml  expressionSubstitution_tests.ml  normalForm.ml  normalFormUtils.ml  normalForm_tests.ml  normal_form.ml  testUtils.ml  utils.ml
lib/analysis/analysis_Utils/: analysis_Utils.ml  astCommandsToCfgCommands.ml  commandToLogicConversion.ml  normalFormUtils.ml  printUtils.ml  renameVariable.ml
lib/analysis/atomic/: atomic.ml  atomicBase.ml  atomic_Utils.ml  heapSemantics.ml  heapTests.ml  tests.ml
lib/analysis/atomic/tests/: allocTests.ml  freeTests.ml  nonHeapTests.ml  readTests.ml  (+1 more)
lib/analysis/cfgAnalysis/: cfgAnalysis.ml  cfgAnalysis_Base.ml  cfgAnalysis_Utils.ml
lib/analysis/dataStructures/: analysis_DataStructures_Base.ml  cfgCommands.ml  controlFlowGraph.ml  dataStructures.ml  logicFormulas.ml  normalizedFormulas.ml  regularCommands.ml  state.ml
lib/analysis/expressionSubstitution/: expressionSubstitution.ml  expressionSubstitutionBase.ml  expressionSubstitutionUtils.ml  tests.ml
lib/analysis/formulaSimplification/: boundVarEqual.ml  boundVariableCleanup.ml  duplicateDisjoints.ml  expressionSimplification.ml  formulaSimplification.ml  formulaSimplificationBase.ml  noSharedIdentifierAndSep.ml  removeBoundNonAllocations.ml  removeDuplicateTrueInAndSep.ml  removeIdentityComparisons.ml  unitAnd.ml  unitAndSep.ml  unitOr.ml  zeroAnd.ml  zeroNormalForm.ml
lib/analysis/normalization/: normalization.ml  normalizationBase.ml  normalizationMethods.ml  normalizationUtils.ml  tests.ml  variableHandling.ml
lib/analysis/semanticValidation/: Analysis_SemanticValidation_Base.ml  semanticValidation.ml  tests.ml
lib/ast/: annotation_logic.ml  ast.ml  base.ml  coherent_logic.ml  heap_regular_commands.ml  regular_commands.ml
lib/cfg/: ast2cfg.ml  ast2cfg.mli  base.ml  base.mli  cfg.ml  cfg_Base.ml  cfg_Base.mli  cfg_Converter.ml  cfg_Converter.mli  cfg_Node.ml  cfg_Node.mli  cfg__cfg.ml  cfg__cfg.mli  cfg__converter.ml  cfg__converter.mli  cfg__node.ml  cfg__node.mli
lib/cfg/tests/: cfg_Tests_Utils.ml  test0.ml
lib/parser/: commands.mly  dune  lexer_commands.mll  location.ml  logic.mly  utils.ml
lib/parser_lexer/: dune  lex.ml  lexer.mll  location.ml  parser.mly  parsing.ml
lib/parser_lexer/tests/: c06.ml  c08.ml  parser_test_00.ml  test_utils.ml  utils.ml
lib/submodules/: submodules.ml
system-tests/: input0.txt  input1.txt  input3.txt  pt0_input.txt  pt10_input.txt  pt10_output.txt  pt11_input.txt  pt11_output.txt  pt12_input.txt  pt12_output.txt  pt13_input.txt  pt13_output.txt  pt14_input.txt  pt14_output.txt  pt15_input.txt  pt16_input.txt  pt16_output.txt  pt17_input.txt  pt17_output.txt  pt18_input.txt  pt19_input.txt  pt19_output.txt  pt1_input.txt  pt1_output.txt  pt20_input.txt  pt20_output.txt  pt21_input.txt  pt21_output.txt  pt22_input.txt  pt22_output.txt  pt23_input.txt  pt24_input.txt  pt25_input.txt  pt26_input.txt  pt26_output.txt  pt27_input.txt  pt27_output.txt  pt28_input.txt  pt28_output.txt  pt2_input.txt  (+16 more)
system-tests/old/: input1.txt  input2.txt  output0.txt
test/: dune  test_ast_prelude.ml  test_ast_program.ml  test_cfg.ml  test_cl_program.ml  test_lisproject.ml
test/Programs/: pt0_input.txt  pt10_input.txt  pt11_input.txt  pt12_input.txt  pt12_output.txt  pt13_input.txt  pt14_input.txt  pt15_input.txt  pt16_input.txt  pt17_input.txt  pt18_input.txt  pt19_input.txt  pt19_output.txt  pt1_input.txt  pt1_output.txt  pt20_input.txt  pt20_output.txt  pt21_input.txt  pt21_output.txt  pt22_input.txt  pt23_input.txt  pt23_output.txt  pt24_input.txt  pt24_output.txt  pt25_input.txt  pt26_input.txt  pt27_output.txt  pt29_input.txt  pt29_output.txt  pt2_input.txt  pt2_output.txt  pt3_input.txt  pt4_input.txt  pt4_output.txt  pt5_input.txt  pt5_output.txt  pt6_input.txt  pt7_input.txt  pt8_input.txt  pt8_output.txt  (+1 more)
test/ast/: test_ast_program.ml  test_logic_program.ml
test/cfg/: test_ast2cfg.ml  test_cfg.ml
test/parser_lexer/: test_parser.ml  test_parser_asts.ml
test/samples/: 00.sil
(+62 files in other folders)
