(lang dune 3.14)

(name lisproject)

(generate_opam_files true)

(source
 (uri https://github.com/Alex23087/LIS-Project))

(authors
  "Yuri Andriaccio"
  "Samuele Bonini"
  "Andrea Castagna"
  "Marco Antonio Corallo"
  "Andrea Simone Costa"
  "Fabio Federico"
  "Elvis Rossi"
  "Matteo Simone"
  "Alessandro Scala"
)

(license GPL-3.0-or-later)

(package
 (name lisproject)
 (depends ocaml dune)
)
