(include_subdirs unqualified)

(test
  (name test_ast_program)
  (libraries lisproject)
  (modules test_ast_program)
  (preprocess
  (pps ppx_deriving.show ppx_deriving.ord ppx_deriving.eq ppx_sexp_conv ppx_compare)))

(test
  (name test_cfg)
  (libraries lisproject)
  (modules test_cfg)
  (preprocess
  (pps ppx_deriving.show ppx_deriving.ord ppx_deriving.eq ppx_sexp_conv ppx_compare))
)

(test
  (name test_logic_program)
  (libraries lisproject)
  (modules test_logic_program)
  (preprocess
  (pps ppx_deriving.show ppx_deriving.ord ppx_deriving.eq ppx_sexp_conv ppx_compare))
)

(test
  (name test_parser)
  (libraries lisproject)
  (modules test_parser)
  (preprocess
  (pps ppx_deriving.show ppx_deriving.ord ppx_deriving.eq ppx_sexp_conv ppx_compare))
)

(test
  (name test_ast_prelude)
  (libraries lisproject)
  (modules test_ast_prelude)
  (preprocess
  (pps ppx_deriving.show ppx_deriving.ord ppx_deriving.eq ppx_sexp_conv ppx_compare))
)
