(include_subdirs unqualified)

(executable
  (name test_ast_program)
  (libraries failure_ssil_analyzer)
  (modules test_ast_program)
  (preprocess
  (pps ppx_deriving.show ppx_deriving.ord ppx_deriving.eq ppx_sexp_conv ppx_compare)))

(executable
  (name test_cfg)
  (libraries failure_ssil_analyzer)
  (modules test_cfg)
  (preprocess
  (pps ppx_deriving.show ppx_deriving.ord ppx_deriving.eq ppx_sexp_conv ppx_compare))
)

(executable
  (name test_logic_program)
  (libraries failure_ssil_analyzer)
  (modules test_logic_program)
  (preprocess
  (pps ppx_deriving.show ppx_deriving.ord ppx_deriving.eq ppx_sexp_conv ppx_compare))
)

(executable
  (name test_parser)
  (libraries failure_ssil_analyzer)
  (modules test_parser)
  (preprocess
  (pps ppx_deriving.show ppx_deriving.ord ppx_deriving.eq ppx_sexp_conv ppx_compare))
)

(executable
  (name test_ast_prelude)
  (libraries failure_ssil_analyzer)
  (modules test_ast_prelude)
  (preprocess
  (pps ppx_deriving.show ppx_deriving.ord ppx_deriving.eq ppx_sexp_conv ppx_compare))
)
